<resources>
    <string name="app_name">News App</string>
    <string name="news_feed">NEWS FEED</string>
    <string name="search_hint">SEARCH</string>
    <string name="go">GO</string>
    <string name="card_image">Card Image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">News at your fingertips</string>
    <string name="nav_header_desc">News App</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Headlines</string>
    <string name="menu_general">General</string>
    <string name="menu_entertainment">Entertainment</string>
    <string name="menu_business">Business</string>
    <string name="menu_sports">Sports</string>
    <string name="menu_health">Health</string>
    <string name="menu_science">Science</string>

    <string name="logout">Log Out</string>
</resources>